/**
*   客户端与逻辑服之间的消息定义
*/
syntax = "proto3";
package netproto;

// 错误码
enum E_Code {
    E_ERROR = 0;

    E_OK = 1; // 成功
    E_RELOGIN = 2; // 重复登录
    E_NONE_EXIST = 3; // 账号不存在
    E_UNKNOWN = 4;
    E_SERVER_INTERNAL_ERROR = 5;    // 服务器内部错误，一般是服务器的一个bug造成
    E_INVALID_PARAM = 6; // 无效的参数
    E_INVALID_OPT = 7;     // 无效操作

    E_LIMIT_GOLD = 20;       // 金币不足
    E_LIMIT_DIAMOND = 21;    // 钻石不足
    E_LIMIT_TIMES = 22;     // 次数限制
    E_LIMIT_CHAPTER_LEVEL = 23; // 关卡等级不足
    E_LIMIT_PLAYER_LEVEL = 24; // 人物等级不足
    E_LIMIT_CAPACITY = 25; // 容量不足
}

// 心跳
message CS_Tick {
}
message SC_Tick {
}

// 登录
message CS_Login {
    string token = 1;
}
message SC_Login {
    E_Code code = 1; // 登录结果
}

// 冲钻石
message CS_ShopAddDiamond {
    int32 idx = 1;
}
message SC_ShopAddDiamond {
    E_Code code = 1; // 结果
}
// 购买金币
message CS_ShopBuyGold {
}
message SC_ShopBuyGold {
    E_Code code = 1; // 结果
}

// 抽英雄
message CS_HeroDraw {
    int32 num = 1;
}
message SC_HeroDraw {
    E_Code code = 1; // 结果
}

// 升级英雄等级
message CS_HeroUplevel {
    int32 heroId = 1;
}
message SC_HeroUpLevel {
    E_Code code = 1; // 结果
}

// 装备英雄
message CS_HeroEquip {
    int32 heroId = 1;
    int32 equipId = 2;
}
message SC_HeroEquip {
    E_Code code = 1; // 结果
}

// 领取挂机奖励
message CS_ChapterGetPrize {
}
message SC_ChapterGetPrize {
    E_Code code = 1; // 结果
}

// 关卡挑战
message CS_ChapterChallenge {
}
message SC_ChapterChallenge {
    E_Code code = 1; // 结果
}

// p2p消息
message CS_P2P {
    int64 from = 1;
    int64 to = 2;
    bytes msg = 3;
}

// p2p消息
message SC_P2P {
    int64 from = 1;
    int64 to = 2;
    bytes msg = 3;
}

message CS_None{}

// 前100号的消息留给系统用
enum EMsgIds {
    ECS_None = 0;

    ECS_P2P = 101;
    ESC_P2P = 102;
    // 心跳
    ECS_Tick = 201;
    ESC_Tick = 202;
    ECS_Login = 203;
    ESC_Login = 204;
    ECS_ShopAddDiamond = 205;
    ESC_ShopAddDiamond = 206;
    ECS_ShopBuyGold = 207;
    ESC_ShopBuyGold = 208;
    ECS_HeroDraw = 209;
    ESC_HeroDraw = 210;
    ECS_HeroUplevel = 211;
    ESC_HeroUpLevel = 212;
    ECS_HeroEquip = 213;
    ESC_HeroEquip = 214;
    ECS_ChapterGetPrize = 215;
    ESC_ChapterGetPrize = 216;
    ECS_ChapterChallenge = 217;
    ESC_ChapterChallenge  = 218;
}
